--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -25,7 +25,7 @@ Container
 /* --------------------------------------------------------------------------------
 Button
 -------------------------------------------------------------------------------- */
-
+/* 
 .btn {
   display: inline-block;
   padding: 10px 20px;
@@ -57,7 +57,7 @@ Button
 .btn:hover {
   background-color: #008183;
   text-decoration: none;
-}
+} */
 
 /* This line makes the "Register" and "Login" buttons look like links */
 .btn_asLink {
