--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -73,7 +73,7 @@ Button
 .btn_asLink:hover {
   background-color: transparent;
   border-color: #008183;
-  color: #008183;
+  color: #bb2f8f;
 }
 
 /* --------------------------------------------------------------------------------
