--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -2,20 +2,20 @@
   font-size: 24px;
   font-weight: 700;
   display: inline-block;
-  color: #f2f2f2;
+  color: #bb2f8f;
   padding-left: 10px;
 }
 
 .nav {
   margin: 0 0 30px;
-  background-color: #bb2f8f;
+  background-color: #f2f2f2;
   overflow: hidden;
 }
 
 .nav-link {
   float: left;
   color: #f2f2f2;
-  background-color: #bb2f8f;
+  background-color: #4cda2f;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
