styling font colour and nav bar. changing the imports of luxon to proper syntax on FE side

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,7 +13,7 @@ body {
   background: transparent url('run_background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-size: relative;
+  background-attachment: fixed;
 }
 
 img {
